# aether

./: .gitignore  AETHER.md  AGENTS.md  PRD.md  README.md  RFC.txt  package.json  pnpm-workspace.yaml  prd.json  progress.txt  ralph.sh
.cursor/rules/: conformance.mdc  git-workflow.mdc  implementation-strategy.mdc  python-development.mdc  security.mdc  typescript-development.mdc
docs/: release-checklist.md
implementations/python-sdk/: pyproject.toml
implementations/python-sdk/aether/: client.py  invoice.py  keys.py  pow.py
implementations/python-sdk/aether.egg-info/: PKG-INFO  SOURCES.txt
implementations/python-sdk/tests/: test_pow.py
implementations/relay/: pyproject.toml
implementations/relay/aether_relay/: __init__.py  bloom.py  core.py  filters.py  gossip.py  limits.py  quic_transport.py  server.py  validation.py  websocket_transport.py
implementations/relay/aether_relay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
implementations/relay/aether_relay/storage/: __init__.py  memory.py  rocksdb.py  sqlite.py
implementations/relay/tests/: test_capabilities.py  test_crypto.py  test_pow.py  test_sqlite_storage.py  test_storage.py  test_subscriptions.py  test_validation.py
integration-tests/: README.md  run_filters.py  run_interop.py  run_relay.py
integration-tests/ts/: publish.js  (+1 more)
ralph/: prd.json
relay/: README.md
relay/python/: pyproject.toml
relay/python/aether_relay/: __init__.py  capabilities.py  crypto.py  handlers.py  noise.py  pow.py  quic_transport.py  server.py  subscriptions.py  validation.py  websocket_transport.py
relay/python/aether_relay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
relay/python/aether_relay/gateways/: __init__.py  common.py  http.py  nostr_ws.py
relay/python/aether_relay/storage/: rocksdb.py  sqlite.py
relay/python/data/: relay.db
relay/python/tests/: test_capabilities.py  test_core.py  test_filters.py  test_gossip.py  test_handlers.py  test_limits.py  test_rocksdb_storage.py  test_storage.py  test_validation.py  test_vectors.py  test_wire.py
relay/python/tests/gateway/: test_filter_parity.py  test_gateway_error_contract.py  test_http_publish_stream_flow.py  test_http_ws_json_flow.py  test_nostr_event_flow.py
scripts/: python-dev.sh
sdk/python/: README.md  pyproject.toml
sdk/python/aether/: __init__.py  capabilities.py  client.py  crypto.py  filters.py  noise.py  tools.py  wire.py
sdk/python/aether.egg-info/: requires.txt
sdk/python/aether/crdt/: __init__.py
sdk/python/tests/: test_capabilities.py  test_client_filters.py  test_crdt.py  test_crypto.py  test_tools.py  test_version.py  test_wire.py
spec/: message.fbs  protocol.md  schema.fbs
(+51 files in other folders)
